--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> federico de angelis scorsone </h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quia voluptas eum nemo, consectetur odit illum et officia eius quos minus recusandae itaque ullam ut autem alias perferendis blanditiis officiis.</p>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quia voluptas eum nemo, consectetur odit illum et officia eius quos minus recusandae itaque ullam ut autem alias perferendis blanditiis officiis.</p>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quia voluptas eum nemo, consectetur odit illum et officia eius quos minus recusandae itaque ullam ut autem alias perferendis blanditiis officiis.</p>
+    <h1> federico de angelis scorsone's personale website </h1>
+    <p> Welcome on my website. The site is currently in progress.</p>
 </body>
 </html>
