--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> federico de angelis scorsone's personale website </h1>
+    <h1> federico de angelis scorsone's personal website </h1>
     <p> Welcome on my website. The site is currently in progress.</p>
 </body>
 </html>
