--- a/work/index.html
+++ b/work/index.html
@@ -6,7 +6,7 @@
     <title>Federico De Angelis Scorsone</title>
 </head>
 
-<body> <p> <a href="/home/fed/Documents/Sito internet personale e CV nuovo/sito_personale/index.html" > Go back to home page  </a> </p> </body>
+<body> <p> <a href="federicodeangelisscorsone.github.io/index.html" > Go back to home page  </a> </p> </body>
 
 
 
