--- a/education/index.html
+++ b/education/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federico De Angelis Scorsone</title>
 </head>
+<body> <p> <a href="federicodeangelisscorsone.github.io/index.html" > Go back to home page  </a> </p> </body>
 
 
 <!-- MSc section -->
