--- a/work/index.html
+++ b/work/index.html
@@ -6,7 +6,7 @@
     <title>Federico De Angelis Scorsone</title>
 </head>
 
-<body> <p> <a href="federicodeangelisscorsone.github.io" > Go back to home page  </a> </p> </body>
+<body> <p> <a href="https://federicodeangelisscorsone.github.io" > Go back to home page  </a> </p> </body>
 
 
 
