--- a/work/index.html
+++ b/work/index.html
@@ -6,7 +6,7 @@
     <title>Federico De Angelis Scorsone</title>
 </head>
 
-<body> <p> <a href="https://federicodeangelisscorsone.github.io/index.html" > Go back to home page  </a> </p> </body>
+<body> <p> <a href="https://federicodeangelisscorsone.github.io/index.htmls" > Go back to home page  </a> </p> </body>
 
 
 
@@ -21,7 +21,7 @@
     <!--Consiglio di amministrazione-->
     <b> University of Roma Tre </b> <br />
     <dl> 
-    <dt> <i> Board of Directors Member </i> </dt>
+    <dt> <i> Board of Directors Member (Oct 2022 - Nov 2023)</i> </dt>
     <dd> · Approved the €180M University’s budget and strategic plan. <br />
         · Oversaw the management of the University's operations, including 11 executives offices and 400,000 square meters of administered space. <br />
         · Monitored the University's financial performances. <br /> 
@@ -36,7 +36,7 @@
     <!--Agic Technology-->
     <b> Agic Technology </b> <br />
     <dl> 
-    <dt> <i> Finance and operation intern </i> </dt>
+    <dt> <i> Finance and operation intern (Feb 2022 - May 2022) </i> </dt>
     <dd> · Microsoft Dynamics ERP consulting. <br />
         · Deep understanding of business processes. <br />
         · Improved my MS office suite and Sharepoint technical skill. <br />
@@ -50,7 +50,7 @@
     <!--Senato, SBA et al-->
     <b> University of Roma Tre </b> <br />
     <dl> 
-    <dt> <i> Academic senator </i> </dt>
+    <dt> <i> Academic senator (Oct 2020 - Nov 2021)</i> </dt>
     <dd> · Influenced the decisions of 40+ people through my participation in the decision-making process on academic matters, such as teaching activities, general organization, and student life.<br /> 
         · Approved 10+ international exchange programs for teaching and research activities.<br />
         · Served the needs of 31,000 students.<br />
@@ -60,7 +60,7 @@
           
 
 
-    <dt> <i> Member of the University Library board </i> </dt>
+    <dt> <i> Member of the University Library board (Sept 2019 - Nov 2021) </i> </dt>
     <dd> · Developed the library's 1.5M budget and acquisition policy, ensuring the quality and accessibility of resources for 31,000 students and researchers. <br />
         · Supported the development of 8 area libraries, promoting collaboration between them including resources sharing. <br />
 
@@ -70,7 +70,7 @@
 
 
 
-    <dt> <i> Member of the Economics and Business school board </i> </dt>
+    <dt> <i> Member of the Economics and Business school board (Jul 2019 - Nov 2021)</i> </dt>
     <dd> · Supervised, as student representative, the teaching activities and general organization related to the 8 business studies and economics degrees programs. <br />
 
     </dd>
@@ -81,7 +81,7 @@
     <!--Consiglio dei giovani-->
     <b> Rome Capital city</b> <br />
     <dl> 
-    <dt> <i> Youth municipal councilor </i> </dt>
+    <dt> <i> Youth municipal councilor (Jun 2017 - Jun 2020)</i> </dt>
     <dd> · Organized financial education tours to 5+ high schools.  <br />
         · Created "www.secondolibro.it" (now closed), a digital second-hand book market with more than 800 listings.  <br />
         · Created "www.passpar2.it" (now closed), a website offering 90+ discounts to under 25s.  <br />
@@ -96,7 +96,7 @@
     <!--Liceo augusto righi-->
     <b> Scientific High School "Augusto Righi" </b> <br />
     <dl> 
-    <dt> <i> Member of the evaluation board </i> </dt>
+    <dt> <i> Member of the evaluation board (Dec 2015 - Jun 2017)</i> </dt>
     <dd> · Established a paper-based and digital system for collecting +1000 student feedback, and conducted evaluation and analysis using MS Excel. <br />
         · Partecipated in the analysis of teaching activities, such as lectures, tutorials, and laboratory sessions, and didactic achievement, such as student test scores and grades. <br />
 
