--- a/education/index.html
+++ b/education/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1> Federico De Angelis Scorsone's education details </h1>
 
-    <h2> MSc in Economics exams list</h2>
+    <h2> MSc in Economics (Expected March 2024)</h2>
     <p> Thesis in elaborating stage </p>
     <p> Expected final grade: 110/110 with a GPA of 28,17/30 </p>        
     <p> 
@@ -41,7 +41,7 @@
     <!-- BSc section -->
 
 
-    <h2> BSc in Economics </h2>
+    <h2> BSc in Economics (March 2021)</h2>
     <p> Thesis in <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Mathematical models for economics using R, Octave and Python.pdf"> Download (ITA) </a> </p>
     <p> Final grade: 106/110 with a GPA of 27,58/30 </p>
     <p> 
