--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>  <a href="work/index.html"> Professional and institutional experiences; </a> </li>
             <li> <a href="education/index.html"> Education details; </a> </li>
             <li> <a href="volunteer/index.html"> Volunteering experiences; </a> </li>
-            <li> <a href="coderepo/index.html"> Code repositories </a> </li>
+            <li> <a href="coderepo/index.html"> Code repositories </a> and <a href="economicsresources/index.html"> economics resources </a> </li>
 
         </ul>
 
@@ -28,7 +28,7 @@
         
 
     <p>
-        Currently a Board Member of the University of Rome Tre, I'm a graduate student with a passion for macroeconomics, finance, mathematics, and programming.
+        A former Board Member of the University of Rome Tre, I'm a graduate student with a passion for macroeconomics, finance, mathematics, and programming.
         Whenever possible, I contribute to making society a better place through direct involvement in institutions.
         I interned in the business consulting sector to improve my business skills.
         
