--- a/economicsresources/index.html
+++ b/economicsresources/index.html
@@ -21,7 +21,7 @@
         <th scope="col">| Statistics (or dataset)</th>
         </tr>
         <tr>
-        <th scope="row">European Central Bank:</th>
+        <th scope="row">European Central Bank</th>
         <td> <a href="https://www.ecb.europa.eu/home/html/index.en.html"> link </a> </td>
         <td> <a href="https://www.ecb.europa.eu/pub/html/index.en.html"> link </a> </td>
         <td> <a href="https://www.ecb.europa.eu/stats/html/index.en.html"> link </a> </td>
