--- a/education/index.html
+++ b/education/index.html
@@ -18,7 +18,8 @@
     <h2> MSc in Economics (Expected March 2024)</h2>
     <p> Thesis in elaborating stage </p>
     <p> Expected final grade: 110/110 with a GPA of 28,17/30 </p>        
-    <p> 
+    <p> Exams list: </p>
+    <p>
         <ul> 
             <li>   Advanced macroeconomics  </li>
             <li>   Advanced microeconomics  </li>
@@ -30,7 +31,7 @@
             <li>   Monetary policy and financial markets   </li>
             <li>   Mathematical methods for economics - Advanced course    </li>
             <li>   Public finance  </li>
-            <li>   Law and Finance for Protecting Savings </li>
+            <li>   Law and Finance for savings protection </li>
             <li>   Advanced political economy  </li>
             
         </ul>
@@ -44,6 +45,7 @@
     <h2> BSc in Economics (March 2021)</h2>
     <p> Thesis in <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Mathematical models for economics using R, Octave and Python.pdf"> Download (ITA) </a> </p>
     <p> Final grade: 106/110 with a GPA of 27,58/30 </p>
+    <p> Exams list: </p>
     <p> 
             <ul> 
             <li>   Macroeconomics     </li>
