--- a/work/index.html
+++ b/work/index.html
@@ -21,7 +21,7 @@
     <!--Consiglio di amministrazione-->
     <b> University of Roma Tre </b> <br />
     <dl> 
-    <dt> <i> Board of Directors Member (Oct 2022 - Oct 2023)</i> </dt>
+    <dt> <i> Member of the Board of Directors (Oct 2022 - Oct 2023)</i> </dt>
     <dd> · Approved the €180M University’s budget and strategic plan. <br />
         · Oversaw the management of the University's operations, including 11 executives offices and 400,000 square meters of administered space. <br />
         · Monitored the University's financial performances. <br /> 
