--- a/education/index.html
+++ b/education/index.html
@@ -16,8 +16,8 @@
     <h1> Federico De Angelis Scorsone's education details </h1>
 
     <h2> MSc in Economics (Expected March 2024)</h2>
-    <p> Thesis in elaborating stage </p>
-    <p> Expected final grade: 110/110 with a GPA of 28,17/30 </p>        
+    <p> Thesis in <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="MSc_thesis_final.pdf"> Download (ITA) </a> </p>
+    <p> Final grade: 110/110L </p>        
     <p> Exams list: </p>
     <p>
         <ul> 
@@ -25,7 +25,7 @@
             <li>   Advanced microeconomics  </li>
             <li>   Computational finance   </li>
             <li>   Quantitative finance and derivates  </li>
-            <li>   Econometrics  - Advanced course   </li>
+            <li>   Econometrics - advanced course   </li>
             <li>   Game theory  </li>
             <li>   Corporate and investment banking  </li>
             <li>   Monetary policy and financial markets   </li>
