--- a/education/index.html
+++ b/education/index.html
@@ -16,7 +16,7 @@
     <h1> Federico De Angelis Scorsone's education details </h1>
 
     <h2> MSc in Economics (Expected March 2024)</h2>
-    <p> Thesis in <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="MSc_thesis_final.pdf"> Download (ITA) </a> </p>
+    <p> Thesis in <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="MSc_thesis_final.pdf"> Download (ENG) </a> </p>
     <p> Final grade: 110/110L </p>        
     <p> Exams list: </p>
     <p>
