--- a/work/index.html
+++ b/work/index.html
@@ -51,9 +51,8 @@
     <b> University of Roma Tre </b> <br />
     <dl> 
     <dt> <i> Academic senator (Oct 2020 - Nov 2021)</i> </dt>
-    <dd> · Influenced the decisions of 40+ people through my participation in the decision-making process on academic matters, such as teaching activities, general organization, and student life.<br /> 
+    <dd> · Served the needs of 31,000 students through my participation in the decision-making process on academic matters, such as teaching activities, general organization, and student life.<br /> 
         · Approved 10+ international exchange programs for teaching and research activities.<br />
-        · Served the needs of 31,000 students.<br />
 
     </dd>
     </dl>
