--- a/education/index.html
+++ b/education/index.html
@@ -16,7 +16,7 @@
     <h1> Federico De Angelis Scorsone's education details </h1>
 
     <h2> MSc in Economics (Expected March 2024)</h2>
-    <p> Thesis in <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="MSc_thesis_final.pdf"> Download (ENG) </a> </p>
+    <p> Thesis in <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="Modeling inflation and Italian inflation-linked bonds.pdf"> Download (ENG) </a> </p>
     <p> Final grade: 110/110L </p>        
     <p> Exams list: </p>
     <p>
@@ -44,7 +44,7 @@
 
     <h2> BSc in Economics (March 2021)</h2>
     <p> Thesis in <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Mathematical models for economics using R, Octave and Python.pdf"> Download (ITA) </a> </p>
-    <p> Final grade: 106/110 with a GPA of 27,58/30 </p>
+    <p> Final grade: 106/110 </p>
     <p> Exams list: </p>
     <p> 
             <ul> 
