--- a/education/index.html
+++ b/education/index.html
@@ -29,7 +29,7 @@
             <li>   Game theory  </li>
             <li>   Corporate and investment banking  </li>
             <li>   Monetary policy and financial markets   </li>
-            <li>   Mathematical methods for economics - Advanced course    </li>
+            <li>   Mathematical methods for economics - advanced course    </li>
             <li>   Public finance  </li>
             <li>   Law and Finance for savings protection </li>
             <li>   Advanced political economy  </li>
@@ -51,7 +51,7 @@
             <li>   Macroeconomics     </li>
             <li>   Microeconomics     </li>
             <li>   Mathematics     </li>
-            <li>   Mathematical methods for economics     </li>
+            <li>   Mathematical methods for economics    </li>
             <li>   Statistics     </li>
             <li>   Econometrics </li>
             <li>   Economic policy    </li>
