--- a/education/index.html
+++ b/education/index.html
@@ -71,6 +71,9 @@
         </ul>       
     </p>
 
+    <h2> Courses and Certifications </h2>
+    <p> <a href="https://www.credly.com/badges/5af92f00-d634-49ac-bcb5-fdb1a2ea7540/linked_in_profile"> MATLAB Associate Certification </a>  </p>
+    <p> <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=ab085b36-37d1-488b-834f-656c6530c021&"> MATLAB Fundamentals course  </a> </p>
 
 
 </body>
