--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -70,7 +70,7 @@
         <dl> 
         <dt> <i> Marketing volunteer (Jul 2018 - Sept 2018)</i> </dt>
         <dd> · Created media material for improving international turism in Azerbaijan. <br />
-            · Travelled all the country with a team of 10+ different culture.  <br />
+            · Travelled all around the country with a team of 10+ different cultures.  <br />
     
         </dd>
         </dl>
