--- a/education/index.html
+++ b/education/index.html
@@ -17,7 +17,7 @@
 
     <h2> MSc in Economics (March 2024)</h2>
     <p> Thesis: <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="Modeling inflation and Italian inflation-linked bonds.pdf"> Download (ENG) </a> </p>
-    <p> Final grade: 110/110L </p>        
+    <p> Final grade: 110/110 cum laude </p>        
     <p> Exams list: </p>
     <p>
         <ul> 
@@ -74,9 +74,8 @@
     <h2> Post-graduate courses and Certifications </h2>
     <p> <a href="https://www.credly.com/badges/5af92f00-d634-49ac-bcb5-fdb1a2ea7540/linked_in_profile"> MATLAB Associate Certification </a>  </p>
     <p> <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=ab085b36-37d1-488b-834f-656c6530c021&"> MATLAB Fundamentals course  </a> </p>
-    <p> <a href="https://federicodeangelisscorsone.github.io/education/Graph_Theory_De_Angelis_Scorsone.pdf"> </a> Graph Theory (Prof. A. Scozzari) </p>
-    <p> <a href="https://federicodeangelisscorsone.github.io/education/Graph_Theory_De_Angelis_Scorsone.pdf"> </a> Graph Theory (Prof. A. Scozzari) </p>
-    <p> <a href="https://federicodeangelisscorsone.github.io/education/Certificate_AI-Algorithms_DeAngelisScorsone.pdf"> </a> AI Algorithms (V.G. Sasso) </p>
+    <p> <a href="https://federicodeangelisscorsone.github.io/education/Graph_Theory_De_Angelis_Scorsone.pdf"> Graph Theory (Prof. A. Scozzari) </a>  </p>
+    <p> <a href="https://federicodeangelisscorsone.github.io/education/Certificate_AI-Algorithms_DeAngelisScorsone.pdf"> AI Algorithms </a>  (V.G. Sasso) </p>
     <p> Stochastic Dynamic Optimization (Ongoing - Prof. M. Corradini) </p>
     
 
