--- a/education/index.html
+++ b/education/index.html
@@ -75,7 +75,7 @@
     <p> <a href="https://www.credly.com/badges/5af92f00-d634-49ac-bcb5-fdb1a2ea7540/linked_in_profile"> MATLAB Associate Certification </a>  </p>
     <p> <a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=ab085b36-37d1-488b-834f-656c6530c021&"> MATLAB Fundamentals course  </a> </p>
     <p> <a href="https://federicodeangelisscorsone.github.io/education/Graph_Theory_De_Angelis_Scorsone.pdf"> Graph Theory (Prof. A. Scozzari) </a>  </p>
-    <p> <a href="https://federicodeangelisscorsone.github.io/education/Certificate_AI-Algorithms_DeAngelisScorsone.pdf"> AI Algorithms </a>  (V.G. Sasso) </p>
+    <p> <a href="https://federicodeangelisscorsone.github.io/education/Certificate_AI-Algorithms_DeAngelisScorsone.pdf"> AI Algorithms (V.G. Sasso) </a>   </p>
     <p> Stochastic Dynamic Optimization (Ongoing - Prof. M. Corradini) </p>
     
 
