--- a/education/index.html
+++ b/education/index.html
@@ -43,7 +43,7 @@
 
 
     <h2> BSc in Economics (March 2021)</h2>
-    <p> Thesis: <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Mathematical models for economics using R, Octave and Python.pdf"> Download (ITA) </a> </p>
+    <p> Thesis: <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Modeling_inflation_and_Italian_inflation-linked_ bonds.pdf"> Download (ITA) </a> </p>
     <p> Final grade: 106/110 </p>
     <p> Exams list: </p>
     <p> 
