--- a/education/index.html
+++ b/education/index.html
@@ -16,7 +16,7 @@
     <h1> Federico De Angelis Scorsone's education details </h1>
 
     <h2> MSc in Economics (March 2024)</h2>
-    <p> Thesis: <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="Modeling inflation and Italian inflation-linked bonds.pdf"> Download (ENG) </a> </p>
+    <p> Thesis: <it> "Modeling inflation and Italian inflation-linked bonds".</it> <a href="Modeling_inflation_and_Italian_inflation-linked_bonds.pdf"> Download (ENG) </a> </p>
     <p> Final grade: 110/110 cum laude </p>        
     <p> Exams list: </p>
     <p>
@@ -43,7 +43,7 @@
 
 
     <h2> BSc in Economics (March 2021)</h2>
-    <p> Thesis: <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Modeling_inflation_and_Italian_inflation-linked_ bonds.pdf"> Download (ITA) </a> </p>
+    <p> Thesis: <it> "Mathematical models for economics using R, Octave and Python".</it> <a href="Mathematical models for economics using R, Octave and Python.pdf"> Download (ITA) </a> </p>
     <p> Final grade: 106/110 </p>
     <p> Exams list: </p>
     <p> 
