--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="body">
 	<div class="line"></div>
-	<h1> <b> Federico De Angelis Scorsone </b></h1>
+	<h1> Federico De Angelis Scorsone </h1>
 
 	<div class="navigation">
 		<a class="active" href="index.html">home</a>
