--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<img src="assets/fotolinkedin_scontornata.jpg" style="border: 0.5em solid #F2F2F2"/>
 			</div>
 			<div class="col">
-				<p class="med">PhD student in Finance at <a href="https://www.uniroma1.it/en/pagina-strutturale/home"> Sapienza University </a>
+				<p class="med">PhD student in Economics and Finance at <a href="https://www.uniroma1.it/en/pagina-strutturale/home"> Sapienza University </a>
 
 				<p class="med">
 					<br />
